tests/paczka1/fuzzy1/33841406.err
Error in line 7: dYv A892 70,2
Error in line 13: XiVELpT S334 88,1
Error in line 28: UJbAR8 A892 99,8
